GNOME Bugzilla – Bug 786307
vaapidecode: fix mismatch of the return type
Last modified: 2017-08-24 11:20:40 UTC
There are returning wrong type in the code.
Created attachment 357611 [details] [review] vaapidecode: fix mismatch of the return type
Attachment 357611 [details] pushed as ee159b5 - vaapidecode: fix mismatch of the return type
also pushed for branch 1.12 * 8d8bebc4 vaapidecode: fix mismatch of the return type